--- a/template/src/index.css
+++ b/template/src/index.css
@@ -1,3 +1,6 @@
+/* @import-normalize;  */
+/* uncommoment "@import-normalize" to bring in normalize.css styles */
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
